remove scrollbar from Product thumbs and fix thumbImage doesn't exists issue

--- a/index.css
+++ b/index.css
@@ -202,6 +202,10 @@ input[type="checkbox"] {
   border-radius: 100px;
 }
 
+.thumbsContainer::-webkit-scrollbar {
+  display: none;
+}
+
 .spinner {
   margin: 4.8rem auto;
   width: 6.4rem;
